--- a/article.bib
+++ b/article.bib
@@ -1,3 +1,32 @@
+@book{YUSTE2011,
+   author = {F C Yuste and G Sanz},
+   isbn = {9788490060841},
+   publisher = {RBA},
+   title = {La conquista del azar: La teor\'\ia de probabilidades},
+   url = {https://books.google.es/books?id=-AGBtgAACAAJ},
+   year = {2011},
+}
+
+@book{chambers2008software,
+  title={Software for Data Analysis: Programming with R},
+  author={Chambers, J.},
+  isbn={9780387759364},
+  lccn={2008922937},
+  series={Statistics and Computing},
+  year={2008},
+  publisher={Springer New York}
+}
+@book{vining1998statistical,
+  title={Statistical Methods for Engineers},
+  author={Vining, G.G.},
+  number={v. 1},
+  isbn={9780534237066},
+  lccn={97010101},
+  series={An Alexander Kugushev book},
+  year={1998},
+  publisher={Duxbury Press}
+}
+
 @inproceedings{Cano2016,
    author = {E L Cano and J Garzás and J M Moguerza and N N Sánchez},
    editor = {L. Gómez Chova and A. López Martínez and I. Candel Torres},
