--- a/packages.bib
+++ b/packages.bib
@@ -30,6 +30,14 @@
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
+@Manual{R-rstudioapi,
+  title = {rstudioapi: Safely Access the RStudio API},
+  author = {Kevin Ushey and JJ Allaire and Hadley Wickham and Gary Ritchie},
+  year = {2020},
+  note = {R package version 0.13},
+  url = {https://github.com/rstudio/rstudioapi},
+}
+
 @Manual{R-shiny,
   title = {shiny: Web Application Framework for R},
   author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
