--- a/article.bib
+++ b/article.bib
@@ -1,3 +1,12 @@
+@article{naya2012estadistica,
+  title={La Estad{\'\i}stica en la ense{\~n}anza preuniversitaria},
+  author={Naya, Salvador and R{\'\i}os, Matilde and Zapata, Luc{\'\i}a},
+  journal={La Gaceta de la RSME},
+  volume={15},
+  number={2},
+  pages={355--368},
+  year={2012}
+}
 @book{YUSTE2011,
    author = {F C Yuste and G Sanz},
    isbn = {9788490060841},
